  (Antonin Décimo, review by David Allsopp and Miod Vallat)

### Build system:

- #13810: Support build of cross compilers to native freestanding targets
  (Samuel Hym, review by Antonin Décimo and Romain Calascibetta)

### Bug fixes:

- #13853: Format breaks some line too early when there
  is a break hint at the end.
  (Florian Angeletti, review by Gabriel Scherer)

OCaml 5.4.0
---------------

(Changes that can break existing programs are marked with a "*")

### Language features:

- #13097: added immutable arrays (`'a iarray` type, Iarray stdlib module)
  (Antal Spector-Zabusky and Olivier Nicole, review by Gabriel Scherer,
  Jeremy Yallop and Vincent Laviron)

- #13340: Array literal syntax [| e1; ...; en |] can now be used to
  denote values of type `'a array` and `'a iarray` and `floatarray`,
  both in expressions and patterns. The compiler disambiguates each
  case by using contextual type information (assuming `'a array`
  by default).
  (Nicolás Ojeda Bär, review by Richard Eisenberg, Jeremy Yallop, Jacques
  Garrigue, and Gabriel Scherer)

- #13498: Tuple fields are now optionally labeled:
  `(x:42, y:0)` and `let (~x, ~y) = ... in ...`.
  (Ryan Tjoa and Chris Casinghino, review by Gabriel Scherer, Chris Casinghino,
  and Leo White)

- RFCs#39, #13404: atomic record fields
    `{ ...; mutable readers : int [@atomic]; ... }`
    `Atomic.Loc.fetch_and_add [%atomic.loc data.readers] 1`
  (Clément Allain and Gabriel Scherer, review by KC Sivaramakrishnan,
   Basile Clément and Olivier Nicole)

### Standard library:

- #13696: Add Result.product and Result.Syntax:
  `let open Result.Syntax in let* x = ... in ...`
  (Daniel Bünzli, review by Gabriel Scherer, Nicolás Ojeda Bär)

- #12871: Add the Pqueue module to the stdlib. It implements priority queues.
  (Jean-Christophe Filliâtre, review by Daniel Bünzli, Léo Andrès and
  Gabriel Scherer)

- #13760: Add String.{edit_distance,spellcheck}